--- a/css/autoprefixer/main.css
+++ b/css/autoprefixer/main.css
@@ -1149,3 +1149,138 @@ body {
   font-size: 18px;
   line-height: 20px;
 }
+/* Reviews */
+.reviews {
+  background-color: #F0F0FA;
+  padding: 75px 0px;
+}
+.reviews__list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: 40px;
+  height: 235px;
+}
+.reviews__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 540px;
+  height: 235px;
+  background-color: #fff;
+  border-radius: 30px;
+  padding: 30px 40px;
+  position: absolute;
+  -webkit-transform: translateX(-570px);
+  transform: translateX(-570px);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s, -webkit-transform 0.6;
+  transition: opacity 0.6s, -webkit-transform 0.6;
+  transition: transform 0.6, opacity 0.6s;
+  transition: transform 0.6, opacity 0.6s, -webkit-transform 0.6;
+}
+.reviews__item .content {
+  max-height: 67px;
+  overflow: hidden;
+  position: relative;
+}
+.reviews__item.show {
+  -webkit-transform: translateX(0px);
+  transform: translateX(0px);
+  opacity: 1;
+}
+.reviews__item.show + .reviews__item {
+  -webkit-transform: translateX(570px);
+  transform: translateX(570px);
+  opacity: 1;
+}
+.reviews__item.show + .reviews__item + .reviews__item {
+  -webkit-transform: translateX(1140px);
+  transform: translateX(1140px);
+  opacity: 0;
+}
+.reviews__img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+.reviews__item-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  margin-top: auto;
+  position: relative;
+}
+.more_info {
+  position: absolute;
+  left: 0px;
+  top: 5px;
+  color: #0009F7;
+  font-weight: 600;
+}
+.reviews__name {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+.reviews__sub {
+  font-size: 12px;
+  line-height: 18px;
+}
+.buttons__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 32px;
+}
+.buttons__wrapper .slider-button {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border: 1px solid #7C85F4;
+}
+.buttons__wrapper .slider-button.next {
+  -webkit-box-ordinal-group: 2;
+  -webkit-order: 1;
+  -ms-flex-order: 1;
+  order: 1;
+}
+.buttons__wrapper .main_button {
+  margin: 0px 32px;
+}
