--- a/less/_icon.less
+++ b/less/_icon.less
@@ -13,6 +13,43 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+.icon-fb:before {
+  content: "\e904";
+  color: #3c4153;
+}
+.icon-ins:before {
+  content: "\e905";
+  color: #3c4153;
+}
+.icon-vider:before {
+  content: "\e906";
+  color: #3c4153;
+}
+.icon-messenger:before {
+  content: "\e907";
+  color: #3c4153;
+}
+.icon-skype:before {
+  content: "\e908";
+  color: #3c4153;
+}
+.icon-telegram:before {
+  content: "\e909";
+  color: #3c4153;
+}
+.icon-slider-arrow-right:before {
+  content: "\e902";
+  color: #7c85f4;
+}
+.icon-slider-arrow-left:before {
+  content: "\e903";
+  color: #7c85f4;
+}
+.icon-active:before {
+  content: "\e901";
+  color: #fff;
+}
 .icon-arrow-header:before {
   content: "\e900";
   color: #3c4153;
@@ -21,5 +58,4 @@
   content: "\e912";
   color: #3c4153;
 }
-
 
