--- a/less/_main-block.less
+++ b/less/_main-block.less
@@ -11,6 +11,8 @@
 .main-section__info {
     padding-top: 185px;
     width: 660px;
+    position: relative;
+    z-index: 1;
     
     p {
         margin: 20px 0px 40px;
@@ -32,7 +34,7 @@
         width: 680px;
         height: 550px;
         background: url(../img/pattern.png) repeat center;
-        z-index: 1;
+        z-index: 0;
     }
     
     .decor-img {
@@ -43,7 +45,7 @@
         height: 100%;
         background: url(../img/main-img-1.svg) no-repeat center;
         background-size: contain;
-        z-index: 2;
+        z-index: 1;
     }
 }
 
@@ -58,9 +60,6 @@
 }
 
 .main-info__item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-align: center;
     width: calc(25% - 15px);
     
@@ -70,12 +69,12 @@
     }
     
     .icon-img {
+        margin: 0px auto 8px;
         width: 65px;
         height: 65px;
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
-        margin-bottom: 8px;
     }
 }
 
@@ -109,15 +108,15 @@
 .workshops__list {
     display: flex;
     flex-wrap: wrap;
-    margin: 32px -45px 32px 0px;
+    margin: 32px -30px 0px 0px;
 }
 
 .workshops__item {
-    width: 340px;
-    height: 350px;
-    margin-right: 45px;
+    width: 350px;
+    min-height: 362px;
+    margin-right: 30px;
     border-radius: 30px;
-    padding: 30px 40px 15px;
+    padding: 40px 40px 15px;
     position: relative;
     margin-bottom: 32px;
     z-index: 1;
@@ -129,9 +128,9 @@
         position: absolute;
         left: 0px;
         top: 0px;
-        padding: 30px 40px 15px;
+        padding: 40px 40px 15px;
         width: 100%;
-        min-height: 350px;
+        min-height: 100%;
         background-color: #fff;
         transition: background-color .6s, color .6s;
         border-radius: 30px;
@@ -159,7 +158,6 @@
         &.benefit-check {
             .price__wrapper {
                 background-color: #5C5DF7;
-                width: calc(100% + 60px);
                 left: -30px;
                 padding: 16px 30px;
                 
@@ -192,11 +190,14 @@
     
     &.benefit-check {
         .price__wrapper {
+            display: flex;
+            justify-content: space-between;
             position: relative;
             left: 0px;
             padding: 16px 0px;
             border-radius: 30px;
-            transition: width .4s, left .4s, padding .4s, background-color .4s;
+            box-sizing: content-box;
+            transition: padding .6s, left .6s, background-color .4s;
         }
     }
 }
@@ -224,7 +225,7 @@
         width: 18px;
         height: 12px;
         background: url(../img/city-icon-1.svg) no-repeat center;
-        background-size: cover;
+        background-size: contain;
         margin-left: 8px;
     }
 }
@@ -243,6 +244,8 @@
     font-size: 14px;
     line-height: 21px;
     margin-top: 19px;
+    width: 100%;
+    min-height: 42px;
     margin-bottom: 0px;
     transition: margin .6s;
 }
@@ -255,11 +258,14 @@
     width: 100%;
     padding: 15px 0px;
     
+    span {
+        font-size: 14px;
+    }
+    
     .benefit {
         color: #6D707E;
         font-size: 14px;
         font-weight: 700;
-        margin-right: auto;
     }
     
     .price {
@@ -296,7 +302,7 @@
 .corporate-training__wrapper {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 110px;
+    margin-bottom: 78px;
     margin-top: 40px;
 }
 
@@ -341,8 +347,6 @@
 /* Corporate calc */
 
 .corporate-calc__wrapper {
-    background-color: #F0F0FA;
-    border-radius: 30px;
     margin-bottom: 150px;
     position: relative;
     
@@ -359,6 +363,8 @@
     
     > .wrapper {
         padding: 40px 56px;
+        background-color: #F0F0FA;
+        border-radius: 30px;
     }
 }
 
@@ -438,7 +444,7 @@
     height: 170px;
     background-color: #F0F0FA;
     border-radius: 30px;
-    margin-bottom: 16px;
+    margin-bottom: 30px;
     position: relative;
     overflow: hidden;
     transition: color .4s, background-color .6s;
@@ -465,7 +471,6 @@
         height: 100%;
         padding: 30px 40px;
         text-decoration: none;
-        display: block;
     }
     
     .info {
@@ -474,13 +479,23 @@
         font-size: 14px;
         margin-bottom: 16px;
     }
+    
+    .topic-footer {
+        position: absolute;
+        right: 40px;
+        bottom: 30px;
+        
+        .topic-time {
+            display: none;
+        }
+    }
 }
 
 .topic__main-info {
     font-size: 24px;
     line-height: 130%;
     position: relative;
-    padding-right: 50px;
+    padding-right: 100px;
     
     .topic_arrow {
         position: absolute;
@@ -518,10 +533,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 10px;
-    width: calc(16.66% - 36.5px);
+    padding: 0px 20px;
+    width: calc(16.66% - 15px);
     height: 95px;
     background-color: #fff;
+    border-radius: 20px;
     
     .img {
         width: 100%;
@@ -529,6 +545,8 @@
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
+        border-radius: 20px;
+        overflow: hidden;
     }
 }
 
@@ -607,7 +625,7 @@
     transition: transform .6s, opacity .6s;
     
     .content {
-        max-height: 67px;
+        max-height: 72px;
         overflow: hidden;
         position: relative;
     }
@@ -647,11 +665,16 @@
 }
 
 .more_info {
+    display: none;
     position: absolute;
     left: 0px;
     top: 5px;
     color: #0009F7;
     font-weight: 600;
+    
+    &.show {
+        display: block;
+    }
 }
 
 .reviews__name {
@@ -673,6 +696,9 @@
     margin-top: 32px;
 
     .slider-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 48px;
         height: 48px;
         border-radius: 50%;
@@ -685,5 +711,348 @@
 
     .main_button {
         margin: 0px 32px;
+    }
+}
+
+/* /Reviews */
+
+/* Notyfication block */
+
+.notyfication__wrapper {
+    margin-bottom: 150px;
+    padding-top: 70px;
+    position: relative;
+    z-index: 1;
+    
+    &::before {
+        content: "";
+        position: absolute;
+        left: -165px;
+        top: 75px;
+        width: 383px;
+        height: 560px;
+        background: url(../img/pattern.png) repeat center;
+        z-index: -1;
+    }
+    
+    &::after {
+        content: "";
+        position: absolute;
+        right: -165px;
+        top: 570px;
+        width: 375px;
+        height: 1200px;
+        background: url(../img/pattern.png) repeat center;
+        z-index: -1;
+    }
+    
+    .wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 32px;
+    }
+}
+
+.notyfication__list {
+    width: calc(50% - 15px);
+}
+
+.notyfication__item {
+    display: flex;
+    padding: 15px 20px 20px;
+    border-radius: 30px;
+    transition: background-color .4s;
+    margin-bottom: 25px;
+    position: relative;
+    
+    .noty-radio {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        z-index: -1;
+        opacity: 0;
+    }
+    
+    &.active {
+        background-color: #F0F0FA;
+        
+        .notyfication__info {
+            h5 {
+                color: #5C5DF7;
+            }
+        }
+    }
+    
+    label {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+    }
+    
+    .noty-radio {
+        &:checked {
+            + .custome-radio {
+                &::before {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+    
+    .custome-radio {
+        width: 20px;
+        height: 20px;
+        border: 2px solid #5C5DF7;
+        position: relative;
+        border-radius: 50%;
+        flex-shrink: 0;
+        
+        &::before {
+            content: "";
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 12px;
+            height: 12px;
+            transform: translate(-50%, -50%);
+            background-color: #5C5DF7;
+            opacity: 0;
+            border-radius: 50%;
+            transition: opacity .4s;
+        }
+    }
+}
+
+.notyfication-sub {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.notyfication__info {
+    align-self: flex-start;
+    
+    h5 {
+        font-size: 16px;
+        transition: color .4s;
+    }
+}
+.notyfication__img {
+    width: 65px;
+    height: 65px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border-radius: 50%;
+    flex-shrink: 0;
+    margin: 0px 15px;
+}
+
+
+.notyfication-subscription {
+    width: calc(50% - 15px);
+    padding: 55px 55px 70px;
+    background-color: #fff;
+    border-radius: 30px;
+    
+    button {
+        max-width: 100%;
+        margin-top: 32px;
+    }
+}
+
+.notyfication-subscription__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.notyfication-subscription__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 23px;
+    width: 100%;
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+    
+    input {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        z-index: -1;
+        opacity: 0;
+        
+        &:checked {
+            + .custome-check {
+                border-color: #5C5DF7;
+                background-color: #5C5DF7;
+                
+                span {
+                    opacity: 1;
+                }
+                
+                ~ .text {
+                    color: #5C5DF7;
+                    text-shadow: 1px 0 0 #5C5DF7;
+                }
+            }
+        }
+    }
+    
+    .text {
+        transition: color .4s, text-shadow .2s;
+    }
+    
+    &:last-child {
+        margin-bottom: 0px;
+    }
+    
+    .custome-check {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 16px;
+        height: 16px;
+        margin-right: 16px;
+        border: 1px solid #3C4153;
+        border-radius: 2px;
+        flex-shrink: 0;
+        transition: border-color .4s, background-color .4s;
+        position: relative;
+        
+        span {
+            content: "";
+            font-size: 8px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+            opacity: 0;
+            transition: opacity .4s;
+        }
+    }
+}
+
+.noty-button__wrapper {
+    
+    button {
+        max-width: 350px;
+    }
+}
+
+
+/* Important-to-us*/
+
+.important-to-us__wrapper {
+    margin-bottom: 150px;
+    position: relative;
+    z-index: 1;
+}
+
+.important-to-us__list {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.important-to-us__item {
+    width: calc(33.33% - 15px);
+    background-color: #F0F0FA;
+    border-radius: 30px;
+    padding: 30px 30px 50px;
+    text-align: center;
+    position: relative;
+    
+    .type {
+        font-size: 24px;
+        line-height: 130%;
+        margin-bottom: 16px;
+        min-height: 48px;
+    }
+    
+    .main_button {
+        position: absolute;
+        left: 35px;
+        bottom: -25px;
+        background-color: #fff;
+        border: none;
+        
+        .decor {
+            background-color: #C9C9FF;
+        }
+    }
+}
+
+
+/* /Important-to-us*/
+
+/* Helpfulp */
+
+.helpful-info {
+    margin-bottom: 200px;
+    position: relative;
+    z-index: 1;
+}
+
+.helpful-info__list {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 48px;
+}
+
+.helpful-info__item {
+    width: calc(25% - 20px);
+    position: relative;
+    
+    .img {
+        width: 160px;
+        height: 160px;
+        border-radius: 20px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+}
+
+.helpful-info__link {
+    display: block;
+    width: 225px;
+    height: 120px;
+    background-color: #F0F0FA;
+    border-radius: 30px;
+    padding: 20px 50px 50px 20px;
+    text-decoration: none;
+    position: absolute;
+    right: 0px;
+    bottom: -50px;
+    transition: background-color .4s, color .4s;
+    
+    &:hover {
+        background-color: #7C85F4;
+        color: #fff;
+        
+        span {
+            &::before {
+                color: #fff;
+            }
+        }
+    }
+    
+    h5 {
+        font-size: 18px;
+        line-height: 23px;
+    }
+    
+    span {
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+        font-size: 13px;
+        
+        &::before {
+            transition: color .4s;
+        }
     }
 }
