--- a/less/main.less
+++ b/less/main.less
@@ -4,3 +4,9 @@
 @import "_general-style.less";
 @import "_header.less";
 @import "_main-block.less";
+@import "_ie-edge-style.less";
+@import "_footer.less";
+@import "_popup.less";
+@import "_general-media.less";
+@import "_header-media.less";
+@import "_main-block-media.less";
