--- a/less/_icon.less
+++ b/less/_icon.less
@@ -13,7 +13,34 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
+.icon-person:before {
+  content: "\e90c";
+  color: #5c5df7;
+}
+.icon-all:before {
+  content: "\e90d";
+  color: #5c5df7;
+}
+.icon-save-world:before {
+  content: "\e90e";
+  color: #5c5df7;
+}
+.icon-economy:before {
+  content: "\e90f";
+  color: #5c5df7;
+}
+.icon-save-work:before {
+  content: "\e910";
+  color: #5c5df7;
+}
+.icon-drop-icon:before {
+  content: "\e90b";
+  color: #7884ac;
+}
+.icon-close:before {
+  content: "\e90a";
+  color: #636c8a;
+}
 .icon-fb:before {
   content: "\e904";
   color: #3c4153;
