--- a/less/_popup.less
+++ b/less/_popup.less
@@ -51,12 +51,18 @@
 .popup-reviews {
     padding: 30px 40px 85px;
     max-width: 540px;
+    width: 100%;
     
     .close-popup {
         color: #0009F7;
         position: absolute;
         right: 40px;
         bottom: 30px;
+        font-size: 12px;
+        line-height: 150%;
+        font-weight: 700;
+        letter-spacing: 0.012em;
+        text-transform: uppercase;
         
         &:hover {
             &::before {
