--- a/less/main.less
+++ b/less/main.less
@@ -10,3 +10,5 @@
 @import "_general-media.less";
 @import "_header-media.less";
 @import "_main-block-media.less";
+@import "_footer-media.less";
+@import "_popup-media.less";
