--- a/less/_header.less
+++ b/less/_header.less
@@ -44,7 +44,7 @@
         &::before {
             content: "";
             position: absolute;
-            left: -3px;
+            right: -5px;
             width: 100%;
             height: 2px;
             top: 7px;
@@ -63,25 +63,6 @@
             height: 2px;
             background-color: #3C4153;
             transition: transform .4s;
-        }
-    }
-    
-    
-    &.active {
-        &:before {
-            transform: rotate(45deg) translate(5px, 5px);
-        }
-        
-        span {
-            &::before {
-                opacity: 0;
-                left: -30px;
-                z-index: -1;
-            }
-            
-            &::after {
-                transform: rotate(-45deg) translate(5px,-5px);
-            }
         }
     }
 }
@@ -104,7 +85,7 @@
     margin-top: 10px;
     z-index: 2;
     
-    .wrapper {
+    > .wrapper {
         display: flex;
         align-items: center;
         border: none;
@@ -121,13 +102,28 @@
     }
     
     &:hover {
-        .burger-menu__wrapper {
+        .burger-menu__list {
             opacity: 1;
             z-index: 1;
             animation: burger .8s;
         }
     }
+    
+    .burger-menu__list {
+        width: 365px;
+        font-size: 16px;
+        color: #fff;
+        position: absolute;
+        left: 0px;
+        top: 100%;
+        background-color: #5C5DF7;
+        box-shadow: 0px 4px 15px rgba(92, 93, 247, 0.25);
+        padding: 16px;
+        opacity: 0;
+        z-index: -1;
+    }
 }
+
 
 .header__list {
     display: flex;
@@ -148,6 +144,7 @@
 }
 
 .burger-menu__wrapper {
+    display: none;
     width: 365px;
     font-size: 16px;
     color: #fff;
@@ -156,14 +153,20 @@
     top: 100%;
     background-color: #5C5DF7;
     box-shadow: 0px 4px 15px rgba(92, 93, 247, 0.25);
-    padding: 16px;
     opacity: 0;
     z-index: -1;
     
     &.active {
         opacity: 1;
         z-index: 2;
-        animation: burger .8s;
+    }
+    
+    .wrapper {
+        padding: 16px;
+    }
+    
+    .close-burger {
+        display: none;
     }
 }
 
